--- a/webstat-tsclustering/tsclustering/data.ipynb
+++ b/webstat-tsclustering/tsclustering/data.ipynb
@@ -45,15 +45,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m dataset_dict \u001b[39m=\u001b[39m get_dataset_list()\n\u001b[0;32m----> 3\u001b[0m dataset_names \u001b[39m=\u001b[39m [dataset[\u001b[39m\"\u001b[39m\u001b[39mname\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39mfor\u001b[39;00m dataset \u001b[39min\u001b[39;00m dataset_dict]\n\u001b[1;32m      5\u001b[0m annuaire_df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(dataset_dict)\n\u001b[1;32m      6\u001b[0m annuaire_df\u001b[39m.\u001b[39mto_csv(\u001b[39m\"\u001b[39m\u001b[39mcatalogue.csv\u001b[39m\u001b[39m\"\u001b[39m, index\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
-      "Cell \u001b[0;32mIn[2], line 3\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      1\u001b[0m dataset_dict \u001b[39m=\u001b[39m get_dataset_list()\n\u001b[0;32m----> 3\u001b[0m dataset_names \u001b[39m=\u001b[39m [dataset[\u001b[39m\"\u001b[39;49m\u001b[39mname\u001b[39;49m\u001b[39m\"\u001b[39;49m] \u001b[39mfor\u001b[39;00m dataset \u001b[39min\u001b[39;00m dataset_dict]\n\u001b[1;32m      5\u001b[0m annuaire_df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(dataset_dict)\n\u001b[1;32m      6\u001b[0m annuaire_df\u001b[39m.\u001b[39mto_csv(\u001b[39m\"\u001b[39m\u001b[39mcatalogue.csv\u001b[39m\u001b[39m\"\u001b[39m, index\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: string indices must be integers"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'DIREN', 'description': 'Observatoire des Entreprises', 'lastUpdate': '2023-08-30 19:14:36.0'}, {'name': 'SC1', 'description': 'Emission et détention  de titres - France', 'lastUpdate': '2023-08-30 19:14:36.0'}, {'name': 'STS', 'description': 'Coûts salariaux, Emploi, Chômage', 'lastUpdate': '2023-08-30 19:14:36.0'}, {'name': 'MIR1', 'description': \"Taux d'intérêt - France\", 'lastUpdate': '2023-08-30 19:38:47.0'}, {'name': 'CPP', 'description': 'Prix immobilier commercial', 'lastUpdate': '2023-08-30 19:04:54.0'}, {'name': 'CFT', 'description': 'Comptes financiers trimestriels', 'lastUpdate': '2023-08-30 19:57:05.0'}, {'name': 'FM', 'description': 'Marché financier, taux', 'lastUpdate': '2023-08-31 09:48:09.0'}, {'name': 'CONJ2', 'description': 'Enquêtes de Conjoncture Régionales', 'lastUpdate': '2023-08-30 20:23:37.0'}, {'name': 'SA', 'description': 'Comptes Nationaux SA', 'lastUpdate': '2023-08-30 20:03:05.0'}, {'name': 'CONJ', 'description': 'Enquêtes de Conjoncture Nationales', 'lastUpdate': '2023-08-30 19:24:41.0'}, {'name': 'MNA', 'description': 'Comptes nationaux agrégats principaux', 'lastUpdate': '2023-08-30 20:08:58.0'}, {'name': 'MIR', 'description': \"Taux d'intérêt - Zone euro\", 'lastUpdate': '2023-08-30 19:51:15.0'}, {'name': 'IVF1', 'description': 'OPC non monétaires', 'lastUpdate': '2023-08-30 19:44:14.0'}, {'name': 'ESTR', 'description': 'Taux à court terme de la zone euro (€STR)', 'lastUpdate': '2023-08-31 09:06:49.0'}, {'name': 'ECOFI', 'description': 'ECOFIN : Économie et Finance', 'lastUpdate': '2023-08-30 20:54:45.0'}, {'name': 'AME', 'description': 'Macro économie - Zone euro', 'lastUpdate': '2023-08-30 19:38:47.0'}, {'name': 'FCI', 'description': 'Indice des conditions financières de la Banque de France (ICF BdF)', 'lastUpdate': '2023-08-30 19:04:54.0'}, {'name': 'CDIS', 'description': 'Investissements directs - CDIS - SDDS', 'lastUpdate': '2023-08-30 20:31:18.0'}, {'name': 'CFANF', 'description': 'Comptes financiers des ANF', 'lastUpdate': '2023-08-30 19:38:47.0'}, {'name': 'CFTDC', 'description': 'CEFIT : Crédits et Dépôts en régions', 'lastUpdate': '2023-08-31 09:50:18.0'}, {'name': 'BPM6', 'description': 'Balance des paiements - 6ème manuel', 'lastUpdate': '2023-08-30 20:49:26.0'}, {'name': 'CNF', 'description': 'Comptes nationaux financiers', 'lastUpdate': '2023-08-30 20:42:02.0'}, {'name': 'ACPR', 'description': 'ACPR - Banque et Assurance en France', 'lastUpdate': '2023-08-30 20:54:45.0'}, {'name': 'EXR', 'description': 'Taux de change', 'lastUpdate': '2023-08-31 09:57:52.0'}, {'name': 'PEA', 'description': \"PEA - PME - Plans d'Epargne en Actions - Petites et Moyennes Entreprises\", 'lastUpdate': '2023-08-30 20:49:26.0'}, {'name': 'ICP', 'description': 'Inflation', 'lastUpdate': '2023-08-30 19:29:50.0'}, {'name': 'FATSO', 'description': \"Implantation des groupes français à l'étranger\", 'lastUpdate': '2023-08-30 20:08:58.0'}, {'name': 'SEC', 'description': 'Emissions de titres - Zone Euro', 'lastUpdate': '2023-08-30 19:57:05.0'}, {'name': 'SI_AI', 'description': \"Stat Info Anticipation d'Inflation\", 'lastUpdate': '2023-08-30 20:49:26.0'}, {'name': 'FTID', 'description': \"Flux trimestriels d'investissements directs\", 'lastUpdate': '2023-08-30 20:08:58.0'}, {'name': 'ESA', 'description': 'Comptes nationaux ESA95', 'lastUpdate': '2023-08-30 19:29:50.0'}, {'name': 'BLS', 'description': 'Enquête auprès des banques sur la distribution du crédit', 'lastUpdate': '2023-08-30 19:57:05.0'}, {'name': 'OFC', 'description': 'Comptes des autres sociétés financières', 'lastUpdate': '2023-08-30 20:08:58.0'}, {'name': 'CEFIT', 'description': 'Crédits et Dépôts en régions', 'lastUpdate': '2023-08-30 20:08:58.0'}, {'name': 'QFAGG', 'description': 'Comptes financiers trimestriels des Administrations publiques', 'lastUpdate': '2023-08-30 20:08:58.0'}, {'name': 'TCN2', 'description': 'Marché des TCN (TCN2)', 'lastUpdate': '2023-08-30 20:37:02.0'}, {'name': 'SAFE', 'description': 'Accès au financement des PME', 'lastUpdate': '2023-08-30 19:38:47.0'}, {'name': 'DSE', 'description': 'Titres de dette', 'lastUpdate': '2023-08-30 20:49:26.0'}, {'name': 'BSI', 'description': 'Agrégats monétaires - Zone euro', 'lastUpdate': '2023-08-30 19:44:14.0'}, {'name': 'RA_T', 'description': 'Réserves de change', 'lastUpdate': '2023-08-30 20:49:26.0'}, {'name': 'ENDET', 'description': 'Comptes financiers - Endettement des ANF', 'lastUpdate': '2023-08-30 19:51:15.0'}, {'name': 'PME', 'description': 'Crédits aux PME', 'lastUpdate': '2023-08-30 19:38:47.0'}, {'name': 'ICB', 'description': 'Actif et passif des assurances', 'lastUpdate': '2023-08-30 20:37:02.0'}, {'name': 'GST', 'description': 'Finances publiques', 'lastUpdate': '2023-08-30 19:51:15.0'}, {'name': 'RPP', 'description': \"Prix de l'immobilier\", 'lastUpdate': '2023-08-30 19:14:36.0'}, {'name': 'DET', 'description': 'Détention par les non-résidents', 'lastUpdate': '2023-08-30 19:29:50.0'}, {'name': 'CONS', 'description': 'Détention de titres', 'lastUpdate': '2023-08-30 20:08:58.0'}, {'name': 'BSI1', 'description': 'Agrégats monétaires - France', 'lastUpdate': '2023-08-30 19:51:15.0'}]\n"
      ]
     }
    ],
@@ -70,79 +65,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "annuaire_df = pd.read_csv(\"catalogue.csv\")\n",
-    "dataset_names = annuaire_df[\"DatasetName\"].tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['SC1',\n",
-       " 'STS',\n",
-       " 'DIREN',\n",
-       " 'MIR1',\n",
-       " 'CPP',\n",
-       " 'CFT',\n",
-       " 'FM',\n",
-       " 'CONJ2',\n",
-       " 'SA',\n",
-       " 'CONJ',\n",
-       " 'MIR',\n",
-       " 'MNA',\n",
-       " 'IVF1',\n",
-       " 'ESTR',\n",
-       " 'FCI',\n",
-       " 'ECOFI',\n",
-       " 'AME',\n",
-       " 'CDIS',\n",
-       " 'CFANF',\n",
-       " 'CFTDC',\n",
-       " 'BPM6',\n",
-       " 'EXR',\n",
-       " 'CNF',\n",
-       " 'ACPR',\n",
-       " 'PEA',\n",
-       " 'ICP',\n",
-       " 'FATSO',\n",
-       " 'SEC',\n",
-       " 'SI_AI',\n",
-       " 'FTI',\n",
-       " 'ESA',\n",
-       " 'OFC',\n",
-       " 'CEFIT',\n",
-       " 'BLS',\n",
-       " 'QFAGG',\n",
-       " 'SAFE',\n",
-       " 'TCN2',\n",
-       " 'DSE',\n",
-       " 'BSI',\n",
-       " 'ICB',\n",
-       " 'RA_T',\n",
-       " 'ENDET',\n",
-       " 'PME',\n",
-       " 'RPP',\n",
-       " 'GST',\n",
-       " 'DET',\n",
-       " 'CONS',\n",
-       " 'BSI']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset_names"
+    "dataset_names = annuaire_df[\"name\"].tolist()"
    ]
   },
   {
@@ -155,20 +83,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'httpCode': '429',\n",
-       " 'httpMessage': 'Too Many Requests',\n",
-       " 'moreInformation': 'Rate Limit exceeded'}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "JSONDecodeError",
+     "evalue": "Expecting value: line 1 column 1 (char 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m get_dataset_observations(dataset_names[\u001b[39m0\u001b[39;49m])\n",
+      "File \u001b[0;32m~/Documents/source/sandbox/webstat-tsclustering/tsclustering/data.py:101\u001b[0m, in \u001b[0;36mget_dataset_observations\u001b[0;34m(dataset, start_period, end_period)\u001b[0m\n\u001b[1;32m     98\u001b[0m res \u001b[39m=\u001b[39m conn\u001b[39m.\u001b[39mgetresponse()\n\u001b[1;32m     99\u001b[0m data \u001b[39m=\u001b[39m res\u001b[39m.\u001b[39mread()\n\u001b[0;32m--> 101\u001b[0m dataset_observations \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39;49mloads(data\u001b[39m.\u001b[39;49mdecode(\u001b[39m\"\u001b[39;49m\u001b[39mutf-8\u001b[39;49m\u001b[39m\"\u001b[39;49m))\n\u001b[1;32m    102\u001b[0m \u001b[39mreturn\u001b[39;00m dataset_observations\n",
+      "File \u001b[0;32m/usr/lib/python3.8/json/__init__.py:357\u001b[0m, in \u001b[0;36mloads\u001b[0;34m(s, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[1;32m    352\u001b[0m     \u001b[39mdel\u001b[39;00m kw[\u001b[39m'\u001b[39m\u001b[39mencoding\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m    354\u001b[0m \u001b[39mif\u001b[39;00m (\u001b[39mcls\u001b[39m \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m object_hook \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m\n\u001b[1;32m    355\u001b[0m         parse_int \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m parse_float \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m\n\u001b[1;32m    356\u001b[0m         parse_constant \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m object_pairs_hook \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m kw):\n\u001b[0;32m--> 357\u001b[0m     \u001b[39mreturn\u001b[39;00m _default_decoder\u001b[39m.\u001b[39;49mdecode(s)\n\u001b[1;32m    358\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mcls\u001b[39m \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    359\u001b[0m     \u001b[39mcls\u001b[39m \u001b[39m=\u001b[39m JSONDecoder\n",
+      "File \u001b[0;32m/usr/lib/python3.8/json/decoder.py:337\u001b[0m, in \u001b[0;36mJSONDecoder.decode\u001b[0;34m(self, s, _w)\u001b[0m\n\u001b[1;32m    332\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdecode\u001b[39m(\u001b[39mself\u001b[39m, s, _w\u001b[39m=\u001b[39mWHITESPACE\u001b[39m.\u001b[39mmatch):\n\u001b[1;32m    333\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Return the Python representation of ``s`` (a ``str`` instance\u001b[39;00m\n\u001b[1;32m    334\u001b[0m \u001b[39m    containing a JSON document).\u001b[39;00m\n\u001b[1;32m    335\u001b[0m \n\u001b[1;32m    336\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 337\u001b[0m     obj, end \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mraw_decode(s, idx\u001b[39m=\u001b[39;49m_w(s, \u001b[39m0\u001b[39;49m)\u001b[39m.\u001b[39;49mend())\n\u001b[1;32m    338\u001b[0m     end \u001b[39m=\u001b[39m _w(s, end)\u001b[39m.\u001b[39mend()\n\u001b[1;32m    339\u001b[0m     \u001b[39mif\u001b[39;00m end \u001b[39m!=\u001b[39m \u001b[39mlen\u001b[39m(s):\n",
+      "File \u001b[0;32m/usr/lib/python3.8/json/decoder.py:355\u001b[0m, in \u001b[0;36mJSONDecoder.raw_decode\u001b[0;34m(self, s, idx)\u001b[0m\n\u001b[1;32m    353\u001b[0m     obj, end \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mscan_once(s, idx)\n\u001b[1;32m    354\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mStopIteration\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[0;32m--> 355\u001b[0m     \u001b[39mraise\u001b[39;00m JSONDecodeError(\u001b[39m\"\u001b[39m\u001b[39mExpecting value\u001b[39m\u001b[39m\"\u001b[39m, s, err\u001b[39m.\u001b[39mvalue) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    356\u001b[0m \u001b[39mreturn\u001b[39;00m obj, end\n",
+      "\u001b[0;31mJSONDecodeError\u001b[0m: Expecting value: line 1 column 1 (char 0)"
+     ]
     }
    ],
    "source": [
@@ -450,7 +381,7 @@
     "weights = [graph[u][v]['weight'] for u,v in edges]\n",
     "\n",
     "plt.figure(figsize=(12,12))\n",
-    "nx.draw(graph, pos, with_labels=True, node_size=300, font_size=8, width=np.array(weights) / 80)"
+    "nx.draw(graph, pos, with_labels=True, node_size=200, font_size=8, width=np.array(weights) / 80)"
    ]
   },
   {
