--- a/coding-test/coding_test/leet/ace-coding-interview.ipynb
+++ b/coding-test/coding_test/leet/ace-coding-interview.ipynb
@@ -153,6 +153,180 @@
     "\n",
     "solution.gcdOfStrings(\"ABABABAB\", \"ABAB\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1431. Kids With the Greatest Number of Candies\n",
+    "\n",
+    "There are n kids with candies. You are given an integer array candies, where each candies[i] represents the number of candies the ith kid has, and an integer extraCandies, denoting the number of extra candies that you have.\n",
+    "\n",
+    "Return a boolean array result of length n, where result[i] is true if, after giving the ith kid all the extraCandies, they will have the greatest number of candies among all the kids, or false otherwise.\n",
+    "\n",
+    "Note that multiple kids can have the greatest number of candies."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "class Solution:\n",
+    "    def kidsWithCandies(self, candies: List[int], extraCandies: int) -> List[bool]:\n",
+    "        max_count = max(candies)\n",
+    "\n",
+    "        for candy_per_kid in candies:\n",
+    "            yield candy_per_kid + extraCandies >= max_count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 605. Can Place Flowers\n",
+    "\n",
+    "You have a long flowerbed in which some of the plots are planted, and some are not. However, flowers cannot be planted in adjacent plots.\n",
+    "\n",
+    "Given an integer array flowerbed containing 0's and 1's, where 0 means empty and 1 means not empty, and an integer n, return true if n new flowers can be planted in the flowerbed without violating the no-adjacent-flowers rule and false otherwise."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def canPlaceFlowers(self, flowerbed: List[int], n: int) -> bool:\n",
+    "        if n == 0:\n",
+    "            return True\n",
+    "        if n == 1 and flowerbed == [0]:\n",
+    "            return True\n",
+    "\n",
+    "        flowerbed_len = len(flowerbed)\n",
+    "        remaining_flower = n\n",
+    "        i = 0\n",
+    "        while i < flowerbed_len - 1:\n",
+    "            j = 0\n",
+    "            if (i == 0 or i == flowerbed_len - 1) and sum(flowerbed[i:i+2]) == 0:\n",
+    "                flowerbed[i] = 1\n",
+    "                remaining_flower -= 1\n",
+    "            elif sum(flowerbed[i:i+3]) == 0:\n",
+    "                flowerbed[i + 1] = 1\n",
+    "                remaining_flower -= 1\n",
+    "                j = 1\n",
+    "\n",
+    "            if remaining_flower == 0:\n",
+    "                return True\n",
+    "\n",
+    "            i += 1 + j\n",
+    "\n",
+    "        return False\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def canPlaceFlowers(self, flowerbed: List[int], n: int) -> bool:\n",
+    "        if n == 0:\n",
+    "            return True\n",
+    "        for i in range(len(flowerbed)):\n",
+    "            if flowerbed[i] == 0 and (i == 0 or flowerbed[i-1] == 0) and (i == len(flowerbed)-1 or flowerbed[i+1] == 0):\n",
+    "                flowerbed[i] = 1\n",
+    "                n -= 1\n",
+    "                if n == 0:\n",
+    "                    return True\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 345. Reverse Vowels of a String\n",
+    "\n",
+    "Given a string s, reverse only all the vowels in the string and return it.\n",
+    "\n",
+    "The vowels are 'a', 'e', 'i', 'o', and 'u', and they can appear in both lower and upper cases, more than once."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def reverseVowels(self, s: str) -> str:\n",
+    "        v = {'a', 'e', 'i', 'o', 'u', 'A', 'E', 'I', 'O', 'U'}\n",
+    "\n",
+    "        vowels = []\n",
+    "        for char in s:\n",
+    "            if char in v:\n",
+    "                vowels.append(char)\n",
+    "        \n",
+    "        result_str = []\n",
+    "        for char in s:\n",
+    "            if char in v:\n",
+    "                result_str.append(vowels.pop())\n",
+    "            else:\n",
+    "                result_str.append(char)\n",
+    "        \n",
+    "        return \"\".join(result_str)\n",
+    "            \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'holle'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution = Solution()\n",
+    "\n",
+    "solution.reverseVowels(\"hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "toto = [1,2,3,4]\n",
+    "toto.pop()\n",
+    "toto"
+   ]
   }
  ],
  "metadata": {
@@ -171,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
