--- a/coding-test/coding_test/python/datasctructures.ipynb
+++ b/coding-test/coding_test/python/datasctructures.ipynb
@@ -62,6 +62,114 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Common linked list question\n",
+    "\n",
+    "* reversing a linked list\n",
+    "* detecting a cycle in a linked list\n",
+    "* removing duplicates from a sorted linked list\n",
+    "* checking if a linked list represents a palindrome"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reverse a linked list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, val):\n",
+    "        self.val = val\n",
+    "        self.next = None\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return str(self.val)\n",
+    "\n",
+    "class LinkedList:\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "    \n",
+    "    def reverse(self):\n",
+    "        prev = None\n",
+    "        curr = self.head\n",
+    "        while curr:\n",
+    "            next = curr.next\n",
+    "            curr.next = prev\n",
+    "            prev = curr\n",
+    "            curr = next\n",
+    "        self.head = prev\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        curr = self.head\n",
+    "\n",
+    "        nodes = []\n",
+    "        while curr:\n",
+    "            nodes.append(str(curr))\n",
+    "            curr = curr.next\n",
+    "        \n",
+    "        return \" -> \".join(nodes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 -> 3 -> 7\n",
+      "7 -> 3 -> 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1 = Node(4)\n",
+    "n2 = Node(3)\n",
+    "\n",
+    "n1.next = n2\n",
+    "n2.next = Node(7)\n",
+    "\n",
+    "ll = LinkedList()\n",
+    "ll.head = n1\n",
+    "\n",
+    "print(ll)\n",
+    "\n",
+    "ll.reverse()\n",
+    "print(ll)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'4'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(n1)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -353,6 +461,81 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check whether a string has balanced parentheses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_balance(s):\n",
+    "    left_side = [\"(\", \"{\", \"[\"]\n",
+    "    right_side = [\")\", \"}\", \"]\"]\n",
+    "\n",
+    "    stack = []\n",
+    "\n",
+    "    for i in s:\n",
+    "        print(i)\n",
+    "        if i in left_side:\n",
+    "            stack.append(i)\n",
+    "        elif i in right_side:\n",
+    "            pos = right_side.index(i)\n",
+    "\n",
+    "            if len(stack) == 0 or (left_side[pos] != stack[len(stack) -1]):\n",
+    "                return False\n",
+    "            else:\n",
+    "                stack.pop()\n",
+    "    \n",
+    "    if len(stack) == 0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(\n",
+      "[\n",
+      "{\n",
+      "}\n",
+      "]\n",
+      ")\n",
+      "{\n",
+      "{\n",
+      "{\n",
+      "}\n",
+      "}\n",
+      "}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_balance(\"([{}]){{{}}}\")"
+   ]
   },
   {
    "attachments": {},
