--- a/coding-test/coding_test/python/algorithms.ipynb
+++ b/coding-test/coding_test/python/algorithms.ipynb
@@ -43,10 +43,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def binary_search(a, k):\n",
+    "    low = 0\n",
+    "    high = len(a) - 1\n",
+    "\n",
+    "    best = None\n",
+    "\n",
+    "    while low <= high:\n",
+    "        mid = high - (high - low) // 2\n",
+    "\n",
+    "        if a[mid] < k:\n",
+    "            low = mid + 1\n",
+    "        elif a[mid] > k:\n",
+    "            high = mid - 1\n",
+    "        else:\n",
+    "            best = mid\n",
+    "            break\n",
+    "    \n",
+    "    return best"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binary_search([1,2,3,4,5], 5) == 4\n",
+    "\n",
+    "binary_search([1,2,3,4,5], 2)"
+   ]
   },
   {
    "attachments": {},
@@ -82,8 +123,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
