--- a/coding-test/coding_test/leet/ace-coding-interview.ipynb
+++ b/coding-test/coding_test/leet/ace-coding-interview.ipynb
@@ -307,25 +307,103 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 151. Reverse Words in a String\n",
+    "\n",
+    "Given an input string s, reverse the order of the words.\n",
+    "\n",
+    "A word is defined as a sequence of non-space characters. The words in s will be separated by at least one space.\n",
+    "\n",
+    "Return a string of the words in reverse order concatenated by a single space.\n",
+    "\n",
+    "Note that s may contain leading or trailing spaces or multiple spaces between two words. The returned string should only have a single space separating the words. Do not include any extra spaces."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "class Solution:\n",
+    "    def reverseWords(self, s: str) -> str:\n",
+    "        words = re.findall(r\"([^\\s]+)\", s)\n",
+    "        return \" \".join(words[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3]"
+       "'blue is sky the'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "toto = [1,2,3,4]\n",
-    "toto.pop()\n",
-    "toto"
+    "solution = Solution()\n",
+    "solution.reverseWords(\"  hello world  \")\n",
+    "solution.reverseWords(\"the sky is blue\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 238. Product of Array Except Self\n",
+    "\n",
+    "Given an integer array nums, return an array answer such that answer[i] is equal to the product of all the elements of nums except nums[i].\n",
+    "\n",
+    "The product of any prefix or suffix of nums is guaranteed to fit in a 32-bit integer.\n",
+    "\n",
+    "You must write an algorithm that runs in O(n) time and without using the division operation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "class Solution:\n",
+    "    def productExceptSelf(self, nums: List[int]) -> List[int]:\n",
+    "        mat = np.ones(len(nums), dtype=int).reshape(-1, 1)  * np.array(nums)\n",
+    "        np.fill_diagonal(mat, 1)\n",
+    "        return mat.prod(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([24, 12,  8,  6])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution = Solution()\n",
+    "solution.productExceptSelf([1,2,3,4])\n"
    ]
   }
  ],
