--- a/lm-from-scratch/notebooks/bert.ipynb
+++ b/lm-from-scratch/notebooks/bert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "\n",
     "VOCAB_SIZE = 30000\n",
     "N_SEGMENTS = 2\n",
-    "MAX_LEN = 100 # 512 # what is the maximum context length for predictions?\n",
+    "MAX_LEN = 256 # 512 # what is the maximum context length for predictions?\n",
     "EMBED_DIM = 128 # 768\n",
     "N_LAYERS = 3\n",
     "ATTN_HEADS = 4 # 32 * 4 = 128\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
     ")\n",
     "\n",
     "# pad the outputs to the longest sentence present\n",
-    "tokenizer.enable_padding(pad_id=3, pad_token=\"[PAD]\", length=MAX_LEN)\n",
+    "tokenizer.enable_padding(pad_id=3, pad_token=\"[PAD]\", length=1000)\n",
     "\n",
     "tokenizer.save(str(TOKENIZER_PATH))"
    ]
@@ -97,19 +97,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "sentences_pairs = corpus.get_sentence_pairs()\n",
     "\n",
-    "df = pd.DataFrame(sentences_pairs, columns=[\"sentence_1\", \"sentence_2_isnext\"])\n",
-    "\n",
-    "\n",
-    "df_filtered = df[(df[\"sentence_1\"].apply(len) < MAX_SENTENCE_LEN)&\n",
-    "                 (df[\"sentence_1\"].apply(len) > MIN_SENTENCE_LEN)&\n",
-    "                 (df[\"sentence_2_isnext\"].apply(len) < MAX_SENTENCE_LEN)&\n",
-    "                 (df[\"sentence_2_isnext\"].apply(len) > MIN_SENTENCE_LEN)].reset_index(drop=True)"
+    "df = pd.DataFrame(sentences_pairs, columns=[\"sentence_1\", \"sentence_2_isnext\"])"
    ]
   },
   {
@@ -137,9 +131,9 @@
     }
    ],
    "source": [
-    "output = tokenizer.encode(df_filtered.loc[2,0])\n",
+    "output = tokenizer.encode(df.loc[2,0])\n",
     "\n",
-    "print(df_filtered.loc[2,0])\n",
+    "print(df.loc[2,0])\n",
     "print(output.tokens)\n",
     "print(output.ids)"
    ]
@@ -171,9 +165,9 @@
     }
    ],
    "source": [
-    "output = tokenizer.encode(*df_filtered.loc[2,])\n",
+    "output = tokenizer.encode(*df.loc[2,])\n",
     "\n",
-    "print(df_filtered.loc[2,])\n",
+    "print(df.loc[2,])\n",
     "print(output.tokens)\n",
     "print(output.ids)\n",
     "print(output.type_ids) # segment ids\n",
@@ -214,152 +208,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sentence_1</th>\n",
-       "      <th>sentence_2_isnext</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>\\n \\n 6. Les parties civiles ont interjeté ap...</td>\n",
-       "      <td>Le ministère public a interjeté appel incident.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>»\\n \\n Réponse de la Cour\\n \\n 16.</td>\n",
-       "      <td>Les moyens sont réunis.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>const., 2 mars 2018, décision n° 2017-693 QPC).</td>\n",
-       "      <td>\\n \\n 19. La cassation est par conséquent enco...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>\\n \\n 19. La cassation est par conséquent enco...</td>\n",
-       "      <td>\\n \\n Portée et conséquences de la cassation\\n...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>\\n \\n DIT n'y avoir lieu à renvoi ;</td>\n",
-       "      <td>\\n \\n DÉCLARE irrecevable la demande de M. [L] ;</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>422</th>\n",
-       "      <td>\\n \\n 12. La cassation est par conséquent enco...</td>\n",
-       "      <td>\\n \\n Portée et conséquences de la cassation\\n...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>423</th>\n",
-       "      <td>\\n \\n Réponse de la Cour\\n \\n 10.</td>\n",
-       "      <td>Les moyens sont réunis.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>424</th>\n",
-       "      <td>\\n \\n 14. La cassation est par conséquent enco...</td>\n",
-       "      <td>\\n \\n Portée et conséquence de la cassation\\n ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>425</th>\n",
-       "      <td>\\n \\n Un mémoire a été produit.</td>\n",
-       "      <td>\\n \\n Faits et procédure\\n \\n 1.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>426</th>\n",
-       "      <td>\\n \\n 3. M. [G] a relevé appel de cette décision.</td>\n",
-       "      <td>\\n \\n Examen du moyen \\n \\n Enoncé du moyen\\n ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>427 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                            sentence_1  \\\n",
-       "0     \\n \\n 6. Les parties civiles ont interjeté ap...   \n",
-       "1                   »\\n \\n Réponse de la Cour\\n \\n 16.   \n",
-       "2      const., 2 mars 2018, décision n° 2017-693 QPC).   \n",
-       "3    \\n \\n 19. La cassation est par conséquent enco...   \n",
-       "4                  \\n \\n DIT n'y avoir lieu à renvoi ;   \n",
-       "..                                                 ...   \n",
-       "422  \\n \\n 12. La cassation est par conséquent enco...   \n",
-       "423                  \\n \\n Réponse de la Cour\\n \\n 10.   \n",
-       "424  \\n \\n 14. La cassation est par conséquent enco...   \n",
-       "425                    \\n \\n Un mémoire a été produit.   \n",
-       "426  \\n \\n 3. M. [G] a relevé appel de cette décision.   \n",
-       "\n",
-       "                                     sentence_2_isnext  \n",
-       "0      Le ministère public a interjeté appel incident.  \n",
-       "1                              Les moyens sont réunis.  \n",
-       "2    \\n \\n 19. La cassation est par conséquent enco...  \n",
-       "3    \\n \\n Portée et conséquences de la cassation\\n...  \n",
-       "4     \\n \\n DÉCLARE irrecevable la demande de M. [L] ;  \n",
-       "..                                                 ...  \n",
-       "422  \\n \\n Portée et conséquences de la cassation\\n...  \n",
-       "423                            Les moyens sont réunis.  \n",
-       "424  \\n \\n Portée et conséquence de la cassation\\n ...  \n",
-       "425                   \\n \\n Faits et procédure\\n \\n 1.  \n",
-       "426  \\n \\n Examen du moyen \\n \\n Enoncé du moyen\\n ...  \n",
-       "\n",
-       "[427 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_filtered"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Prepare for batch"
+    "# Split dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_13295/1352146235.py:11: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_6816/765054496.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -373,17 +237,17 @@
        "False"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Train and test splits\n",
-    "sentence_pair_split = int(0.9*len(df_filtered))\n",
+    "sentence_pair_split = int(0.9*len(df))\n",
     "\n",
-    "df_train = df_filtered[:sentence_pair_split]\n",
-    "df_eval = df_filtered[sentence_pair_split:].reset_index(drop=True)\n",
+    "df_train = df[:sentence_pair_split]\n",
+    "df_eval = df[sentence_pair_split:].reset_index(drop=True)\n",
     "\n",
     "train_col_1_shuffled = df_train[\"sentence_2_isnext\"].sample(\n",
     "    frac=1, \n",
@@ -404,9 +268,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "sentence_pair_train_isnext = tokenizer.encode_batch(\n",
     "    df_train[[\"sentence_1\", \"sentence_2_isnext\"]].values)\n",
@@ -418,7 +291,45 @@
     "    df_eval[[\"sentence_1\",\"sentence_2_isnext\"]].values)\n",
     "\n",
     "sentence_pair_val_notnext = tokenizer.encode_batch(\n",
-    "    df_eval[[\"sentence_1\",\"sentence_2_isnext\"]].values)\n",
+    "    df_eval[[\"sentence_1\",\"sentence_2_isnext\"]].values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sentence_pair_train_isnext' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/clem/Source/sandbox/lm-from-scratch/notebooks/bert.ipynb Cell 14\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/clem/Source/sandbox/lm-from-scratch/notebooks/bert.ipynb#X34sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mlen\u001b[39m(sentence_pair_train_isnext[\u001b[39m100\u001b[39m])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sentence_pair_train_isnext' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "len(sentence_pair_train_isnext[100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def filter_by_sentence_length():\n",
+    "    for pair in sentence_pairs:\n",
+    "        if pair\n",
+    "\n",
+    "df_filtered = df[(df[\"sentence_1\"].apply(len) < MAX_SENTENCE_LEN)&\n",
+    "                 (df[\"sentence_1\"].apply(len) > MIN_SENTENCE_LEN)&\n",
+    "                 (df[\"sentence_2_isnext\"].apply(len) < MAX_SENTENCE_LEN)&\n",
+    "                 (df[\"sentence_2_isnext\"].apply(len) > MIN_SENTENCE_LEN)].reset_index(drop=True)\n",
     "\n",
     "sentence_pair_train_data = (sentence_pair_train_isnext, sentence_pair_train_notnext)\n",
     "sentence_pair_val_data = (sentence_pair_val_isnext, sentence_pair_val_notnext)"
